@@ -849,6 +849,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-7817. RawLocalFileSystem.append() should give FSDataOutputStream
     with accurate .getPos() (kanaka kumar avvaru via vinayakumarb)
 
+    HADOOP-12074. in Shell.java#runCommand() rethrow InterruptedException as
+    InterruptedIOException (Lavkesh Lahngir via vinayakumarb)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
